--- a/OITDemo/index.html
+++ b/OITDemo/index.html
@@ -10,6 +10,6 @@
 </head>
 <body style="background: #000;">
 <div id="cesiumContainer" class="fullWindow"></div>
-<div id="loadingIndicator" class="loadingIndicator"></div>
+<div id="toolbar"></div>
 </body>
 </html>
