Update OIT demo loading and style.

--- a/OITDemo/index.html
+++ b/OITDemo/index.html
@@ -10,6 +10,7 @@
 </head>
 <body style="background: #000;">
 <div id="cesiumContainer" class="fullWindow"></div>
+<div id="loadingIndicator" class="loadingIndicator"></div>
 <div id="toolbar"></div>
 </body>
 </html>
